# react-native-audio-cortex

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-audio-cortex.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/audiocortex/: AudioCortexModule.java  AudioCortexPackage.java
cpp/: react-native-audio-cortex.cpp  react-native-audio-cortex.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/audiocortexexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/audiocortexexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/audiocortexexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/AudioCortexExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/AudioCortexExample.xcodeproj/: project.pbxproj
example/ios/AudioCortexExample.xcodeproj/xcshareddata/xcschemes/: AudioCortexExample.xcscheme
example/ios/AudioCortexExampleTests/: AudioCortexExampleTests.m
example/src/: App.tsx
ios/: AudioCortex.h  AudioCortex.mm
ios/AudioCortex.xcodeproj/: project.pbxproj
src/: index.tsx
